--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,13 @@ flake8 = "^6.1.0"
 
 [tool.poetry.group.lint.dependencies]
 isort = "^5.12.0"
+mypy = "^1.7.0"
+
+[tool.mypy]
+disallow_untyped_defs = true
+no_implicit_optional = true
+warn_return_any = true
+exclude = 'venv'
 
 [build-system]
 requires = ["poetry-core"]
